Uploaded core site files
Added new homepage html, general css stylesheet, print css stylesheet, Javascript function for a slideshow, and icons.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DavidRichards.Me :: Home</title>
-</head>
-<body>
-    Welcome to my website!
-</body>
+   <head>
+      <!--
+   
+         David Richards :: Home
+         Author: David Richards
+         Date:   2021-10-18
+   
+         Filename: home.html
+   
+      -->
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>David Richards :: Home</title>
+      <link rel="stylesheet" href="style.css" media="screen" />
+      <link rel="stylesheet" href="print.css" media="print" />
+   </head>
+   <body class="home">
+      <main>
+         <aside>
+            <nav>
+               <a href="home.html"
+                  ><div id="logo">David<br />Richards</div></a
+               >
+               <a href="#" id="navItem"><div>About</div></a>
+               <a href="#" id="navItem"><div>Projects</div></a>
+               <a href="#" id="navItem"><div>Graphic Design</div></a>
+            </nav>
+         </aside>
+         <article>
+            <div id="contentLink"><h1>David Richards :: Home</h1></div>
+            This page is currently under construction, please check back later for more information.
+         </article>
+      </main>
+      <footer id="follow">
+         <div id="followUs">Find me elsewhere:</div>
+         <a href="https://www.linkedin.com/in/davidrichardsme"
+            ><div id="icon">LinkedIn<img id="icon" src="img/linkedin.png" alt="LinkedIn" /></div
+         ></a>
+         <a href="https://github.com/drich-jpg"
+            ><div id="icon">GitHub<img id="icon" src="img/github.png" alt="GitHub" /></div
+         ></a>
+      </footer>
+   </body>
 </html>
