--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
                <a href="index.html"
                   ><div id="logo">David<br />Richards</div></a
                >
+               <a href="/index.html" id="navItem"><div>Projects</div></a>
+               <a href="/projects/san-diego-noise-pollution/index.html" id="navItem"><div>Noise Maps</div></a>
+               <a href="https://davidrichards.me/san-diego-native-plants/index.html" id="navItem"><div>San Diego Native Plants</div></a>
+
                <!-- Nav sidebar built, need more content
                <a href="#" id="navItem"><div>About</div></a>
                <a href="#" id="navItem"><div>Page2</div></a>
@@ -46,15 +50,32 @@
                <tbody>
                   <tr>
                      <td>
+                        <a href="/projects/san-diego-noise-pollution/index.html"><img src="/img/thumbnails/sdnoisemap_300x300.png" /></a>
+                     </td>
+                     <td>
+                        <h4>San Diego Noise Map</h4>
+                        <p>A series of maps depicting sources of noise pollution across San Diego County. Created with ArcMap utilizing data from SANDAG, the City of San Diego, and the US Census Bureau.</p>
+                     </td>
+                     <td>ESRI ArcMap, HTML, CSS</td>
+                     <td>[<a href="/projects/san-diego-noise-pollution/index.html">Website</a>]</td>
+                  </tr>
+                  <tr>
+                     <td>
                         <a href="https://davidrichards.me/san-diego-native-plants/index.html"><img src="img/thumbnails/sdplants_300x300.png" /></a>
                      </td>
                      <td>
                         <h4>San Diego Native Plants Website</h4>
-                        <p>A static website powered by custom Javascript widgets intended to assist students with remembering different species of native flora around San Diego county.</p>
+                        <p>
+                           A custom website powered by custom Javascript widgets intended to assist students with remembering different species of native flora around San Diego county. Includes a main page listing different species in a flexible layout,
+                           an interactive flashcards page where a user can cycle through different species listings, and a quiz page, where users must select the correct plant species name per common name.
+                        </p>
                      </td>
                      <td>HTML, CSS, Javascript</td>
                      <td>
-                        [<a href="https://davidrichards.me/san-diego-native-plants/index.html">Website</a>]<br />
+                        [<a href="https://davidrichards.me/san-diego-native-plants/index.html">Main Page</a>]<br />
+                        [<a href="https://davidrichards.me/san-diego-native-plants/flashcards.html">Flashcards Page</a>]<br />
+                        [<a href="https://davidrichards.me/san-diego-native-plants/quiz.html">Quiz Page</a>]<br />
+                        <br />
                         [<a href="https://github.com/drich-jpg/san-diego-native-plants">GitHub</a>]
                      </td>
                   </tr>
