--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <h4>San Diego Noise Map</h4>
                         <p>A series of maps depicting sources of noise pollution across San Diego County. Created with ArcMap utilizing data from SANDAG, the City of San Diego, and the US Census Bureau.</p>
                      </td>
-                     <td>ESRI ArcMap, HTML, CSS</td>
+                     <td>ESRI ArcMap, HTML, CSS, Javascript</td>
                      <td>[<a href="/projects/san-diego-noise-pollution/index.html">Website</a>]</td>
                   </tr>
                   <tr>
